--- a/style.css
+++ b/style.css
@@ -1,196 +1,254 @@
-
-
+*{
+    scroll-behavior: smooth;
+}
 body{
     font-family: 'Mukta Malar', sans-serif;
 }
-
-*{
-    margin: 0;
-    padding: 0;
-}
-
-
-i{
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
-.icons{
-    text-align: center;
-    margin: 5rem 10rem;
-}
-
-.icon{
-    padding: 2rem;
-}
-
-
-.about{
-    display: flex;
-    align-items: center;
-    margin: 5rem 10rem;
-    padding: 2rem;
-}
-.content{
-    margin-left: 5rem;
-}
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: 15rem 10rem;
-    text-align: center;
-}
-
-
-.profile{
-    border: 10px solid rgb(245, 249, 249);
-    border-radius: 6rem;
-}
-
-/* .icons{
-    margin: 5rem 10rem;
-} */
-
-
-.tech{
-    text-align: center;
-}
-h2{
-    text-align: center;
-}
-
-.projects{
-    text-align: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 5rem 10rem;
-    column-gap: 50px;
-    row-gap: 50px;
-    padding: 1rem 5rem;
-}
-
-.project{
-    font-weight: bold; 
-    box-shadow: 2px 2px 50px rgba(93, 92, 92, 0.2);
-    padding: 1rem 1rem;
-    border-radius: 1rem;
-}
-
 a{
     text-decoration: none;
     color: black;
 }
 
-.project p{
+/* Navbar */
+.navbar{
+    margin: 1rem 5rem;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+
+}
+.nav-items{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+/* Home */
+.profile{
+    box-shadow: 2px 2px 100px rgba(78, 78, 78, 0.2);
+    border-radius: 6.5rem;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    margin: 1rem 5rem;
+    padding: 10rem 0rem;
+}
+.btn{
+    background-color: rgb(36, 252, 198);
+    border: none;
+    padding: .7rem 1rem;
+    color: black;
+    border-radius: .5rem;
     font-weight: bold;
 }
-
-.img{
-    width: 300px;
-    height: 175px;
-    object-fit: cover;
-    border-radius: 1rem;
+.hicons{
+    padding-right: 25px;
 }
-
-footer{
+.container-image{
     text-align: center;
 }
 
 
+/* Internship */
+
+.internships{
+    margin: 5rem 5rem;
+}
+.internship-heading{
+    text-align: center;
+}
+.internship{
+    /* box-shadow: 2px 2px 100px rgba(78, 78, 78, 0.2); */
+    padding: 1rem 1rem;
+    margin: 5rem 0rem;
+    border-radius: 1rem;
+}
+.internship-body{
+    padding: 0rem 2rem;
+    
+}
+
+
+/* Education */
+
+.education-heading{
+    text-align: center;
+}
+.education-body{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
+    margin: 5rem 5rem;
+}
+.education{
+    /* background-color: rgb(36, 252, 198); */
+    /* box-shadow: 2px 2px 100px rgba(78, 78, 78, 0.2); */
+    padding: 1rem 1rem;
+    border-radius: 1rem;
+}
+.edu-body{
+    padding: 0rem 1.5rem;
+}
+
+/* Tech Stack */
+
+.tech-heading{
+    text-align: center;
+}
+.tech-body{
+    margin: 5rem 0rem;
+    padding: 0rem 5rem;
+    text-align: center;
+}
+.icon{
+    padding: 2rem;
+}
+
+/* Projects */
+.projects-heading{
+    text-align: center;
+}
+.projects-body{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 5rem 5rem;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+.img{
+    width: 250px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+.project{
+    text-align: center;
+    box-shadow: 2px 2px 100px rgba(78, 78, 78, 0.2);
+    border-radius: 1rem;
+}
+
+
+/* Mobile Devices */
 @media (max-width: 576px) { 
+    .navbar{
+        margin: 0rem 1rem;
+        display: grid;
+        grid-template-columns: 2fr;
+    }
+    .nav-items{
+        display: none;
+    }
+    h1{
+        font-size: 20px;
+    }
     .container{
-        margin: 10rem 1rem;
-        flex-direction: column-reverse;
+        grid-template-columns: 2fr;
+        margin: 0rem 1rem;
+        padding: 0rem 0rem;
+        row-gap: 50px;
     }
-    .text{
-        padding-top: 3rem;
-    }
-    .img{
-        width: 250px;
-        height: 150px;
-        object-fit: cover;
-    }
-    .icons{
+    .internships{
         margin: 1rem 1rem;
-        text-align: center;
-        padding: 3rem;
     }
-    .icon{
-        padding: 2rem;
+    .internship{
+        /* box-shadow: 2px 2px 100px rgba(78, 78, 78, 0.2); */
+        padding: 0rem 1rem;
+        margin: 1rem 0rem;
+    }
+    .internship-body{
+        padding: 0rem 1rem;
     }
 
-    .projects{
-        margin: 3rem 0rem;
-        padding: 1rem 1rem;
-    }
-    .projects{
+    .education-body{
+        display: grid;
         grid-template-columns: 1fr;
+        column-gap: 30px;
+        margin: 1rem 1rem;
     }
-}
 
-@media (min-width: 568px) { 
-    .container{
-        margin: 10rem 1rem;
-        flex-direction: column-reverse;
-    }
-    .text{
-        padding-top: 3rem;
-    }
-    .projects{
-        grid-template-columns: 1fr;
-        margin: 3rem 1rem;
-    }
-}
-
-@media (min-width: 768px) { 
-    .container{
-        margin: 10rem 1rem;
-        flex-direction: column-reverse;
-    }
-    .text{
-        padding-top: 3rem;
-    }
-    .projects{
-        grid-template-columns: 1fr;
-        margin: 3rem 1rem;
-    }
-}
-
-@media (min-width: 912px) { 
-    .container{
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        flex-direction: row;
-        margin: 15rem 10rem;
+    .tech-body{
+        margin: 1rem 0rem;
+        padding: 0rem 1rem;
         text-align: center;
     }
-    .text{
-        padding-top: 0;
-    }
-    .projects{
+
+    .projects-body{
         grid-template-columns: 1fr;
-        margin: 5rem 10rem;
+        margin: 1rem 1rem;
+        row-gap: 30px;
+    }
+    .tech-heading{
+        margin-top: 3rem;
+    }
+    .internship-heading{
+        margin-top: 3rem;
+    }
+    .education-heading{
+        margin-top: 3rem;
+    }
+    .projects-heading{
+        margin-top: 3rem;
     }
 }
 
-@media (min-width: 1024px) { 
-    .projects{
-        grid-template-columns: 1fr 1fr;
-        margin: 5rem 5rem;
+@media only screen and (min-width: 500px) and (max-width: 768px) { 
+    .navbar{
+        margin: 0rem 2.5rem;
+        display: grid;
+        grid-template-columns: 2fr;
     }
-}
-@media (min-width: 1040px) { 
-    .projects{
+    .nav-items{
+        display: none;
+    }
+    h1{
+        font-size: 20px;
+    }
+    .container{
+        grid-template-columns: 2fr;
+        margin: 0rem 2.5rem;
+        padding: 0rem 0rem;
+        row-gap: 50px;
+    }
+    .internships{
+        margin: 1rem 2.5rem;
+    }
+    .internship{
+        /* box-shadow: 2px 2px 100px rgba(78, 78, 78, 0.2); */
+        padding: 0rem 1rem;
+        margin: 1rem 0rem;
+    }
+    .education-body{
+        display: grid;
         grid-template-columns: 1fr 1fr;
-        margin: 5rem 10rem;
+        column-gap: 30px;
+        margin: 1rem 2.5rem;
+    }
+    .tech-body{
+        margin: 1rem 0rem;
+        padding: 0rem 2.5rem;
+        text-align: center;
+    }
+    .projects-body{
+        grid-template-columns: 1fr 1fr;
+        margin: 3rem 2.5rem;
+        row-gap: 30px;
+    }
+    .tech-heading{
+        margin-top: 3rem;
+    }
+    .internship-heading{
+        margin-top: 3rem;
+    }
+    .education-heading{
+        margin-top: 3rem;
+    }
+    .projects-heading{
+        margin-top: 3rem;
     }
 }
 
-@media (min-width: 2560px) { 
-    .projects{
-        grid-template-columns: 1fr 1fr;
-        margin: 5rem 30rem;
-    }
-}
+
+
+
+
+ 
